--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,21 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background: #111217; /*cor de fundo*/
+    color:#f0f0f0 ; /*cor de texto*/
+    font-family: ;
+}
+a { 
+   text-decoration: none; /*customiza a aparencia do underline do link*/
+   color:#f0f0f0;
+}
+#header {
+    display: flex; /*modo de visualização*/ /*flex- visualização flexível*/
+    flex-wrap: row wrap; /*quebra de linha*/
+    justify-content: space-between; /*espaço entre os elementos*/
+    align-items: center;
+    width: 100%; /* largura que vai ocupar na tela*/
+    padding: 0.5rem 1rem; /*área externa em medidas*/
+
+}
