--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,17 @@ ul{
     /*position: ; */
     border-bottom: 1px solid  #56575a ; /*embaixo do cabeçalho, haverá uma linha de 1 px sólida e cinza*/
     /*background: ;*/
+    position: relative;
 }
 
 menu-principal {
     margin-right: auto; /* Empurra o menu para a esquerda */
     padding-left: 0; /* Remove padding padrão */
 }
+.header-logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%); /* Centraliza perfeitamente a logo */
 
 .menu-desktop { /*para classe se usa . */
     display: none;
