--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ menu-principal {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    margin-left: auto;
 }
 
 #toggleTheme{
@@ -117,11 +118,11 @@ menu-principal {
 
     .menu-desktop{
         display: flex;
-        min-width: 30%;
+        min-width: auto;
     }
 
     .header-toggle { /*pode controlar depois para melhorar a posição*/
-        min-width: 30%;
+        min-width: auto;
     }
 
 }
