--- a/css/style.css
+++ b/css/style.css
@@ -2,36 +2,31 @@
 :root,  
 :root[data-theme="dark"] {
 
-    --cor-fundo: #111227;
-    --cor-texto: #8f8f8f;
-    
-    --cor-icone: #ecc149;
-    
+    --primary-bg-color:#111227 ;
+    --cor-texto:#8f8f8f ;
+    --cor-icone: #ecc149 ;
     --cor-link: #f0f0f0;
-    --cor-hover: #e9e9e9;
-    
-    --cor-borda: #28292e;
+    --cor-hover: #e9e9e9 ;
+    --cor--borda:#28292e;
 
 }
+
 
 /*definir cores tema Light*/  
 :root[data-theme="light"] {
 
-    --cor-fundo: #e9e9e9;
-    --cor-texto: #323232;
-    
+    --primary-bg-color: #e9e9e9;
+    --cor-texto: #323232 ;
     --cor-icone: #5ca2e4;
-    
     --cor-link: #0b0b0f;
     --cor-hover: #0b0b0f;
-    
-    --cor-borda:#9a9a9c;
+    --cor--borda:#9a9a9c ;
     
 }
 
 
 html[data-theme="light"] .logo {
-    filter: invert(1);  /*filtro para inverter a cor*/ 
+    filter: invert(1) ;  /*filtro para inverter a cor*/ 
 
 }
 
@@ -43,14 +38,14 @@ html[data-theme="light"] .logo {
 }
 
 body {
-    background: var(--cor-fundo); /*cor de fundo*/
-    color: var(--cor-texto); /*cor de texto*/
+    background: var(--primary-bg-color); /*cor de fundo*/
+    color:#f0f0f0 ; /*cor de texto*/
     /*font-family: ;*/
 }
 
 a { 
    text-decoration: none; /*customiza a aparencia do underline do link*/
-   color: var(--cor-link);
+   color:#f0f0f0;
 }
 
 ul{
@@ -71,28 +66,32 @@ ul{
 }
 
 .menu-desktop { /*para classe se usa . */
-    display: none;
+    display: none; /*esse menu em telas grandes vai sumir*/
 }
 
 .menu {
     display: flex;
-    gap: 1rem; /*espaço entre os objetos*/
+    gap: 1rem ; /*espaço entre os objetos*/
     align-items: center;
 }
+
+.menu-texto {
+    color:var(--cor-texto);
+    text-transform: uppercase; /*alterar o formato do texto */
+    font-size: 0.75rem;
+    font-weight: 600; /*expessura da fonte*/
+}
+
 
 .menu-link.active .menu-texto,
 .menu-link:hover .menu-texto { /*hover- quando passar o mouse por cima irá destacar a palavra*/
     color: #f0f0f0;
-}
-.menu-texto {
-    color: var(--cor-texto);
-    text-transform: uppercase; /*alterar o formato do texto */
+
 }
 
 .logo{
     width: 3.25rem ; /*52 px*/
-    height: 1rem;
-
+    height: 1rem;;
 }
 
 .header-toggle {
@@ -107,13 +106,20 @@ ul{
     font-size: 1.2rem;
     transition: all  0.3s ease-in-out;
 }
+/*MENU MOBILE*/
+
+#menuMobile{
+    margin-left: 1rem;
+}
+
+
 /*medidas responsivas*/
 
 @media (min-width: 768px) {  /*resolução de até 768px até o infinito*/
 
     .menu-desktop{
         display: flex;
-        min-width: auto;
+        min-width: 30%;
     }
 
     .header-toggle { /*pode controlar depois para melhorar a posição*/
