--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,13 @@
 :root[data-theme="dark"] {
 
     --primary-bg-color:#111227 ;
+    --cor-fundo-secundaria: #28292e;
     --cor-texto:#8f8f8f ;
     --cor-icone: #ecc149 ;
     --cor-link: #f0f0f0;
     --cor-hover: #e9e9e9 ;
     --cor--borda:#28292e;
+    --icone-menu-mobile: #e9e9e9;
 
 }
 
@@ -16,11 +18,13 @@
 :root[data-theme="light"] {
 
     --primary-bg-color: #e9e9e9;
+    --cor-fundo-secundaria: #C7C8C9;
     --cor-texto: #323232 ;
     --cor-icone: #5ca2e4;
     --cor-link: #0b0b0f;
     --cor-hover: #0b0b0f;
     --cor--borda:#9a9a9c ;
+    --icone-menu-mobile:#9a9a9c ;
     
 }
 
@@ -59,10 +63,10 @@ ul{
     align-items: center;
     width: 100%; /* largura que vai ocupar na tela*/
     padding: 0.5rem 1rem; /*acrescenta espaços internos*/
-    /* z-index: ; */
-    /*position: ; */
-    border-bottom: 1px solid  #56575a ; /*embaixo do cabeçalho, haverá uma linha de 1 px sólida e cinza*/
-    /*background: ;*/
+    z-index: 200; /*Sistema de camadas -  */ 
+    position: fixed; 
+    border-bottom: 1px solid  var(--cor--borda) ; /*embaixo do cabeçalho, haverá uma linha de 1 px sólida e cinza*/
+    background: var(--cor-fundo-secundaria) ;
 }
 
 .menu-desktop { /*para classe se usa . */
@@ -112,6 +116,51 @@ ul{
     margin-left: 1rem;
 }
 
+.btn-menu-mobile{
+    background: transparent;
+    color: var(--icone-menu-mobile);
+    border:none;
+    font-size: 1.8rem;
+    padding: 0.5rem;
+    margin-left: 1rem;
+    display: flex;
+    align-items: center; /*alinhar div*/
+    justify-content: center; /*alinhar div*/
+}
+
+/*Menu mobile (estilo e animação) */
+
+.menu-mobile{ /*nav*/
+    position: fixed;
+    top: 0;
+    right:0;
+    background: var(--cor-fundo-secundaria);
+    z-index: 100;
+    transform: translateX(100); /*pesquisar depois*/
+    display: flex;
+    flex-direction: column;
+    padding-top: 4rem;
+    border-left: 1px solid var(--cor--borda);
+    height: 100vh ; /*VH= VIEWPORT HEIGHT*/
+    width: 25%; /*VW= VIEWPORT WIDTH*/
+    transition: 0.3s ease-in-out; /*efeito do icone alternar entre X e o menu*/
+}
+
+
+.menu-mobile.active{
+    transform: translateX(0%);
+}
+.menu-mobile .menu-lista{
+    width: 100%;
+    text-align: center;
+    padding-top: 0.5rem;
+ }
+
+ .menu-mobile .menu-link{
+    display:inline-block;
+    font-size: 1rem;
+    padding: 0.5rem 0;
+ }
 
 /*medidas responsivas*/
 
@@ -124,6 +173,10 @@ ul{
 
     .header-toggle { /*pode controlar depois para melhorar a posição*/
         min-width: 30%;
+    }
+
+    .btn-menu-mobile{
+        display:none;
     }
 
 }
