--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root,  
 :root[data-theme="dark"] {
 
-    --primary-bg-color:#111227 ;
+    --cor-fundo:#111227 ;
     --cor-fundo-secundaria: #28292e;
     --cor-texto:#8f8f8f ;
     --cor-icone: #ecc149 ;
@@ -17,8 +17,8 @@
 /*definir cores tema Light*/  
 :root[data-theme="light"] {
 
-    --primary-bg-color: #e9e9e9;
-    --cor-fundo-secundaria: #C7C8C9;
+    --cor fundo: #e9e9e9;
+    --cor-fundo-secundaria: #c7c8c9;
     --cor-texto: #323232 ;
     --cor-icone: #5ca2e4;
     --cor-link: #0b0b0f;
@@ -88,7 +88,7 @@ ul{
 
 
 .menu-link.active .menu-texto,
-.menu-link:hover .menu-texto,
+.menu-link:hover .menu-texto {
     color: var(--cor-hover);
 
 }
@@ -197,5 +197,6 @@ ul{
     
 
 }
+
 
 
