--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     --cor-link: #f0f0f0;
     --cor-hover: #e9e9e9;
     
-    --cor--borda:#28292e;
+    --cor-borda:#28292e;
     
     --icone-menu-mobile: #e9e9e9;
 
@@ -32,7 +32,7 @@
     --cor-link: #8f8f8f;
     --cor-hover: #0b0b0f;
 
-    --cor--borda:#9a9a9c;
+    --cor-borda:#9a9a9c;
 
     --icone-menu-mobile:#0b0b0f;
     
@@ -207,6 +207,7 @@ ul{
     
 
 }
+
 
 
 
