--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 /*definir cores tema Light*/  
 :root[data-theme="light"] {
 
-    --cor fundo: #e9e9e9;
+    --cor-fundo: #e9e9e9;
     --cor-fundo-secundaria: #c7c8c9;
 
     --cor-texto: #808080;
@@ -207,6 +207,7 @@ ul{
     
 
 }
+
 
 
 
