--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ League spartan
 
     --cor-texto:#8f8f8f;
 
+    --cor-titulo:#e9e9e9;
+
     --cor-icone: #ffa927;
 
     --cor-link: #f0f0f0;
@@ -47,6 +49,8 @@ League spartan
     --cor-fundo-secundaria: #c7c8c9;
 
     --cor-texto: #808080;
+
+    --cor-titulo:#0b0b0f;
 
     --cor-icone: #12a3f7;
 
@@ -90,6 +94,29 @@ ul{
 h1{
     font-size: 2.5rem;
     font-weight: 200;
+}
+
+h1,
+h2,
+h3{
+    font-family: var(--fonte-titulo);
+    text-transform: uppercase;
+    color: var(--cor-titulo);
+    font-weight: 200;
+}
+strong{
+    font-weight:400;
+
+}
+
+p, span, li{
+    font-size: 1rem;
+
+}
+
+p {
+    text-align: justify;
+    font-family: var(--fonte-corpo);
 }
 
 #header { /*para id se usa #*/
@@ -244,9 +271,30 @@ h1{
     aspect-ratio: 16/9;
  }
 
-/*medidas responsivas*/
 
-@media (min-width: 768px) {  /*resolução de até 768px até o infinito*/
+ /*voltar e atualizar*/
+
+#home,
+.projetos,
+.sobre,
+.contato {
+    padding: 2.5rem 1rem;
+    }
+
+/*medidas responsivas*/
+@media (max-width: 768px) {  /*até 768px*/
+
+    #home {
+        padding-top: 6rem;
+    }
+
+}
+
+@media (min-width: 768px) {  /*A partir de 768px até o infinito*/
+
+    #header {
+        padding: 1rem 6rem;
+    }
 
     .menu-desktop{
         display: flex;
@@ -261,12 +309,35 @@ h1{
         display: none;
     }
 
-    #home {
-        padding-top: 6rem;
+    #home,
+    .projetos,
+    .sobre {
+        padding:8rem 6rem 4rem 6rem;
     }
 
+    .main-content {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    h1{
+        font-size: 5rem;
+    }
 
 }
+/*Fim min-width 768px */
+ @media (max-width: 1200px) {
+    #home{
+        padding: 6rem 6rem 2rem;
+    }
+ }
+
+  @media (min-width: 1400px){
+    h1{
+        font-size: 6.25rem;
+    }
+  }
 
 
 
