--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ League spartan
 
     --icone-menu-mobile: #e9e9e9;
 
+    --sombra: rgba(245, 245, 245, 0.454);
+    --scrollbar: #8f8f8f;
+
+
 }
 
 
@@ -61,6 +65,9 @@ League spartan
 
     --icone-menu-mobile:#0b0b0f;
 
+    --sombra: rgba(31, 31, 31, 0.454);
+    --scrollbar:#0b0b0f;
+
 }
 
 
@@ -74,6 +81,8 @@ html[data-theme="light"] .logo {
     margin: 0;
     padding: 0;
     box-sizing: border-box; /*controla tudo internamente, não permite que os elementos transbordem*/
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbar) transparent;
 }
 
 body {
@@ -94,6 +103,12 @@ ul{
 h1{
     font-size: 2.5rem;
     font-weight: 200;
+}
+
+h2{
+    font-size: 2rem;
+    text-align: center;
+    letter-spacing: 0.4rem;
 }
 
 h1,
@@ -314,6 +329,7 @@ p {
  .video iframe {
     width: 50%;
     aspect-ratio: 16/9;
+    box-shadow: 0px 15px 15px -2px var(--sombra) ; /*mudar a cor e os valores*/
  }
 
 
@@ -332,13 +348,16 @@ p {
     justify-content: flex-start;
     align-items: center;
     background: var(--cor-fundo-secundaria);
-    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);/*arumar depois para cores mais suavéis,tons de azul?*/
+    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);/*arumar depois para cores mais suavéis,tons de azul, roxo e lilás?*/
     padding: 6.25rem 1rem 2rem;
     margin-top: -5.5rem; /*também é possível trabalhar com números negativos*/
 }
 
 .conhecimento h2{
     font-size: 2rem;
+    text-transform: none;
+    letter-spacing: normal;
+
 }
 
 /*medidas responsivas*/
@@ -384,6 +403,9 @@ p {
     h1{
         font-size: 5rem;
     }
+    h2{
+        font-size: 3rem;
+    }
 
 }
 /*Fim min-width 768px */
@@ -391,14 +413,18 @@ p {
     #home{
         padding: 6rem 6rem 2rem;
     }
-    .main-content .btn {
-        width: auto;
+    h2{
+        font-size: 4rem;
     }
  }
 
   @media (min-width: 1400px){
     h1{
         font-size: 6.25rem;
+    }
+
+    h2{
+        font-size: 4.5rem;
     }
   }
 
