--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ p {
     justify-content: flex-start;
     align-items: center;
     background: var(--cor-fundo-secundaria);
-    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);/*arumar depois para cores mais suavéis,tons de azul, roxo e lilás?*/
+    background: linear-gradient(90deg,rgba(135, 199, 224, 100) 0%, rgba(137, 87 ,199, 100) 50%, rgba(204, 137, 176, 100) 100%);/*arrumar depois para cores mais suavéis,tons de azul, roxo e lilás?*/
     padding: 6.25rem 1rem 2rem;
     margin-top: -5.5rem; /*também é possível trabalhar com números negativos*/
 }
@@ -448,6 +448,30 @@ p {
     margin-left: 5px;
     /*color*/
 }
+
+/*sobre*/
+.sobre{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    scroll-margin-top: 2.5rem;
+}
+
+.sobre-content1,
+.sobre-content2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+}
+.sobre-logo{ /*imagem avatar*/
+    width: 100%;
+    border-radius: 50rem; /*deixa a imagem mais redonda*/
+
+}
+
+
+
 
 
 /*IMAGEM CSS*/
