--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,28 @@ p {
 .sobre-logo{ /*imagem avatar*/
     width: 100%;
     border-radius: 50rem; /*deixa a imagem mais redonda*/
+    pointer-events: none; /*bloquea as ações do botão direito do mouse, evita que as pessoas peguem imagens do seu código*/
+    border: 5px solid plum;
+
+}
+
+.sobre-description{
+
+}
+
+.sobre-icones{
+
+}
+.sobre-icones i{
+
+}
+
+.sobre-content2 .col1,
+.sobre-content2 .col2{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    gap: 0.5rem;
 
 }
 
@@ -541,6 +563,21 @@ p {
         justify-content: space-between;
 
     }
+
+    .sobre {
+        gap: 5rem;
+    }
+
+    /*GRID*/
+
+    .sobre-content1,
+    .sobre-content2 {
+        display: grid;
+        grid-template-columns: 34% 60%;/*priemira coluna contetn1 ocupa 34% e o colun2 60%*/
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 4rem;
+   }
 
 
 
