--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,68 @@ p {
 }
 
 
+.accordion {
+    display: inline-block;
+    width: 100%;
+}
+
+.accordion-header{
+    display: flex;
+    width: 100%;
+    padding: 0.75rem 1rem;
+    justify-content: space-between;
+    align-items: center;
+    background: transparent;
+    text-align: start;
+    border: 1px solid var(--cor-borda);
+    cursor: pointer;
+    color:var(--cor-titulo);
+}
+
+.accordion-header:hover{
+    background: var(--cor-fundo-secundaria);
+    transition: all 0.3s ease-in-out;
+}
+
+.accordion-header span{
+    font-weight: 600;
+    font-family: var(--fonte-titulo);
+    text-transform: uppercase;
+}
+
+.accordion-body{
+    display: none;
+    padding: 1.25rem;
+    color: var(--cor-titulo);
+    border:1px solid var(--cor-borda);
+    gap: 0.6rem;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.bi-caret-down-fill {
+    transition: all 0.3s ease-in-out;
+
+}
+
+.accordion-body p{
+   text-decoration: double;
+}
+
+.accordion-item.active  .accordion-body{
+    display: flex;
+
+}
+
+.accordion-item.active .bi-caret-down-fill{
+    transform: rotate(180deg);
+    transition: all 0.3s ease-in-out;
+}
+
+.accordion-item.active  .accordion-header{
+    background-color: var(--cor-fundo-secundaria);
+    transition: all 0.3s ease-in-out;
+}
 
 
 
